--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="term" class="col-sm-2 control-label">Lang</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" id="selected_lang">
+                                <option value="en" selected>English</option>
+                                <option value="als">Alemannisch</option>
+                                <option value="da">Dansk</option>
+                                <option value="de">Deutsch</option>
+                                <option value="es">Español</option>
+                                <option value="fr">Français</option>
+                                <option value="ar">عوالق</option>
+                                <option value="el">Πλαγκτόν</option>
+                                <option value="fa">پلانکتون</option>
+                                <option value="he">פלנקטון</option>
+                                <option value="ja">プランクトン</option>
+                                <option value="ru">Планктон</option>
+                                <option value="ta">மிதவைவாழி</option>
+                                <option value="th">แพลงก์ตอน</option>
+                                <option value="zh">浮游生物界</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <button type="button" id="search_button" class="btn btn-default">Search</button>
                         </div>
