Toggle menubar on page size change

--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
         <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h4 id="searched_term">
-                        No item searched
+                    <h4>
+                        <span class="btn btn-primary" id="show_menu_button">
+                            <span class="glyphicon glyphicon-align-justify"></span>
+                        </span>
+                        <span id="searched_term">No item searched</span>
                     </h4>
                 </div>
                 <div class="panel-body">
-                    <div class="col-md-3">
+                    <div class="col-md-3" id="search_menu">
                         <div class="panel">
                             <div class="panel-body">
                                 <form class="form-horizontal">
@@ -114,7 +117,6 @@
 
     </div>
 </div>
-
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery-3.2.1.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
